Background color and alignment changes Fixes subreddit dropdown order Other mod fixes

--- a/announcements.less
+++ b/announcements.less
@@ -4,10 +4,10 @@
 {
 	& > p > strong {
 		position: absolute;
-	    top: @srbar-height + @userbar-height + @content-padding;
-	    right: @content-padding;
-	    z-index: 999;
-	    
+	    top: @srbar-height + @content-padding;
+	    left: @content-padding;
+	    z-index: 99;
+		
 	    background-color: rgba(0, 0, 0, 0.8);
 	    border: 1px solid rgb(200, 0, 0);
 	    outline: 1px solid black;
