--- a/flair-darkmode.less
+++ b/flair-darkmode.less
@@ -17,4 +17,12 @@
 	.make-team-flair-dark("21");	// Midnight Sun
 	.make-team-flair-dark("35");	// Invictus Gaming
 	.make-team-flair-dark("45");	// Quao Gu
+	
+	.thing {
+		&.linkflair-other {
+			.linkflairlabel {
+				color: @color-gray;
+			}
+		}
+	}
 }
