--- a/flair.less
+++ b/flair.less
@@ -39,7 +39,7 @@
 	
 	&.linkflair-other {
 		.linkflairlabel {
-			color: @color-orange;
+			color: @color-light-gray;
 		}
 	}
 }
