--- a/header.less
+++ b/header.less
@@ -119,6 +119,7 @@
 #header {
 	background: none;
 	border: none;
+	z-index: unset;
 }
 
 #header-bottom-left {
