--- a/style-darkmode.less
+++ b/style-darkmode.less
@@ -2,7 +2,7 @@
 
 // Content
 
-@dark-content-bg: fade(@color-black, 97%);
+@dark-content-bg: fade(@color-black, 99%);
 @dark-content-text-bg: lighten(@color-black, 2%);
 @dark-content-text-border: @color-dark-gray;
 @dark-content-text-color: rgb(204, 204, 204);
