--- a/style.less
+++ b/style.less
@@ -63,7 +63,7 @@
 
 // Background
 @bg-color: rgb(13, 12, 8);
-@bg-pos: 100% @srbar-height;
+@bg-pos: 100% (@srbar-height - 6px);
 @bg-size: calc(~"40% - -700px") auto;
 @bg-dynamic: false;
 
@@ -171,8 +171,8 @@
 * Text *
 *******/
 
-@side-user-text: "off-season free agents";
-@side-online-text: "eating popcorn";
+@side-user-text: "playing Graves";
+@side-online-text: "losing with Graves";
 
 @downvote-message: "off-topic or does not contribute to discussion";
 @no-results-message: "there don't seem to be any friends here";
